--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-      <p class="intro">Experiments and Cutting-edge Developments from {{ page.organization-name }}</p>
+      <p class="intro">Experiments from {{ page.organization-name }}</p>
     <nav>    
         <ul>
           <li><a href="{{ site.baseurl }}/index.html" class="overview">Overview</a></li>
