--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,8 @@
-      <p class="intro">Experiments from {{ page.organization-name }}</p>
+      <p class="intro">Menu</p>
     <nav>    
         <ul>
           <li><a href="{{ site.baseurl }}/index.html" class="overview">Overview</a></li>
-          <li><a href="{{ site.baseurl }}/experiments.html" class="experiments">Experiments</a></li>
+          <li><a href="{{ site.baseurl }}/docs.html" class="docs">Docs</a></li>
           <li><a href="{{ site.baseurl }}/contribute.html" class="contribute">Contribute</a></li>
         </ul>
     </nav>
