--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
     <nav>    
         <ul>
           <li><a href="{{ site.baseurl }}/index.html" class="overview">Overview</a></li>
-          <li><a href="{{ site.baseurl }}/docs.html" class="docs">Docs</a></li>
+          <li><a href="{{ site.baseurl }}/docs.html" class="docs">Toolkit Docs</a></li>
           <li><a href="{{ site.baseurl }}/contribute.html" class="contribute">Contribute</a></li>
         </ul>
     </nav>
