--- a/static/_sass/_base.scss
+++ b/static/_sass/_base.scss
@@ -177,8 +177,8 @@ pre, code {
 }
 
 pre, code, kbd, samp {
-    font-size: .75em;
-    line-height: 0;
+/*    font-size: .75em; */
+    line-height: 1em;
     margin-bottom: 1.375em;
     font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
 }
